UI fix: remove extra space between collapsed msgs

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1018,7 +1018,7 @@ td.pointer {
 .message_list {
     .recipient_row {
         border-bottom: 1px solid hsl(0, 0%, 88%);
-        margin-bottom: 10px;
+/*        margin-bottom: 10px; */
     }
 }
 
